# umfeld

./: .gitignore  CMakeLists.txt  install-arch.sh  install-debian.sh  install-macOS-macports.sh
include/: Geometry.h
scripts/: projectGenerator.sh
scripts/install/: install-macOS-macports.sh
scripts/projectGenerator/: README.md  projectGenerator.sh
scripts/this/: CMakeLists.txt  this.code-workspace
src/: Movie.cpp
templates/: emptyProject.cpp
templates/vscode/: template.code-workspace
